--- a/Sprint/Sprint/Views/Home/Index.cshtml
+++ b/Sprint/Sprint/Views/Home/Index.cshtml
@@ -3,46 +3,30 @@
 }
 
 <div class="text-center">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">                     
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="~/image/game1.jpg" alt="Among Us">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            @for (int i = 0; i < ViewBag.BannerImages.Count; i++)
+            {
+                <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@(i == 0 ? "active" : "")"></li>
+            }
+        </ol>
+        <div class="carousel-inner">
+            @for (int i = 0; i < ViewBag.BannerImages.Count; i++)
+            {
+                <div class="carousel-item @(i == 0 ? "active" : "")">
+                    <a asp-controller="Game" asp-action="Details" asp-route-id="@ViewBag.BannerImages[i].GameId">
+                        <img class="d-block w-100" src="@ViewBag.BannerImages[i].ImageURL" alt="@ViewBag.BannerImages[i].Game.Name">
+                    </a>
                 </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/image/game2.jpg" alt="Red Dead Redemption 2">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/image/game3.jpg" alt="Civilzation 6">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/image/game4.jpg" alt="Horizon Zero Dawn">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/image/game5.jpg" alt="Fallout">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/image/game6.jpg" alt="Grand Theft Auto">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/image/game7.jpg" alt="Call Of Duty">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>    
+            }
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
