--- a/Sprint/Sprint/Views/Shared/_Layout.cshtml
+++ b/Sprint/Sprint/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - RDSC Game Store</title>
+    <title>@ViewData["Title"] - Moist Gaming</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/style.css" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RDSC Game Store</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/image/moistLogo2.png" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -43,11 +43,26 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - RDSC Game Store - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    @*<footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2020 - RDSC Game Store - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>*@
+
+    <footer class="border-top footer">
+        <div class="container-fluid" style="text-align: center; color: #ffffff;">
+            <div class="row">
+                <div class="col-4 footerLinks" style="padding-top: 10px;">&copy; 2020 Moist Gaming</div>
+                <div class="col-4 footerLinks"><img src="~/image/moistLogo2.png" /></div>
+                <div class="col-4 footerLinks" style="padding-top: 10px;">
+                    <a asp-area="" asp-controller="Home" asp-action="Index">Home</a><span> | </span>
+                    <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a><span> | </span>
+                    <a asp-area="" asp-controller="Home" asp-action="Index">Logout</a>
+                </div>
+            </div>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
