--- a/Sprint/Sprint/wwwroot/css/style.css
+++ b/Sprint/Sprint/wwwroot/css/style.css
@@ -1,6 +1,14 @@
-﻿body {
+﻿@import url(//db.onlinewebfonts.com/c/3a47f5f06b5484abfeee9eac90348a9c?family=Gotham);
+
+@font-face {
+    font-family: "Gotham";
+    src: url("//db.onlinewebfonts.com/t/3a47f5f06b5484abfeee9eac90348a9c.eot");
+    src: url("//db.onlinewebfonts.com/t/3a47f5f06b5484abfeee9eac90348a9c.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/3a47f5f06b5484abfeee9eac90348a9c.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/3a47f5f06b5484abfeee9eac90348a9c.woff") format("woff"), url("//db.onlinewebfonts.com/t/3a47f5f06b5484abfeee9eac90348a9c.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/3a47f5f06b5484abfeee9eac90348a9c.svg#Gotham") format("svg");
+}
+
+body {
     background-color: #343A40;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gotham', sans-serif !important;
     margin: 0;
     margin-bottom: 60px;
 }
@@ -9,8 +17,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
+    padding: 20px;
 }
 
 label, p, h1, h4, td, th, dt, dd {
@@ -69,6 +76,66 @@ float:right;}
     align-items: center;
 }
 
+.carouselTitle {
+    text-align: left;
+    color: white;
+}
+
 .navbar a:hover, .subnav:hover .subnavbtn {
-    background-color: red;
+    background-color: dodgerblue;
+}
+
+.sectionHeading {
+    color: white;
+}
+
+.specialOffers {
+    background-color: dodgerblue;
+    height: 3em;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+    float: right;
+}
+
+.discount {
+    background-color: orange;
+    margin: 5px;
+    padding: 5px;
+}
+
+/* media queries for carousel re-sizing
+-------------------------------------------------- */
+@media (min-width: 320px) {
+    .carouselSize {
+        height: 100px;
+        width: 100%;
+    }
+}
+
+@media (min-width: 576px) {
+    .carouselSize {
+        height: 200px;
+        width: 100%;
+    }
+}
+
+@media (min-width: 768px) {
+    .carouselSize {
+        height: 300px;
+        width: 100%;
+    }
+}
+
+@media (min-width: 992px) {
+    .carouselSize {
+        height: 400px;
+        width: 100%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .carouselSize {
+        height: 500px;
+        width: 100%;
+    }
 }
