--- a/Sprint/Sprint/Views/Home/Index.cshtml
+++ b/Sprint/Sprint/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
     <div class="container-fluid" style="padding-left: 0px; padding-right: 0px;">
         <div class="row">
             <div class="col-6" style="text-align: left;">
-                <h3 class="sectionHeading">Special Offers</h3>
+                <h3 class="sectionHeading">Moist Deals</h3>
             </div>
             <div class="col-6" style="text-align: right;">
                 <h3 class="sectionHeading">&nbsp;</h3>
