--- a/Sprint/Sprint/Views/Wishlist/Index.cshtml
+++ b/Sprint/Sprint/Views/Wishlist/Index.cshtml
@@ -36,7 +36,7 @@
                     @Html.DisplayFor(modelItem => item.AddedOn)
                 </td>
                 <td>
-                    <form class="form-inline" asp-route-id="@item.UserGameId" asp-action="Delete">
+                    <form class="form-inline" asp-route-gameid="@item.GameId" asp-action="Remove">
                         <button type="submit" class="btn btn-primary btn-block btn-lg">Remove</button>
                     </form>
                 </td>
