--- a/Sprint/Sprint/Views/Game/Details.cshtml
+++ b/Sprint/Sprint/Views/Game/Details.cshtml
@@ -34,13 +34,13 @@
             <div class="col-4">
                 @if (ViewBag.IsWishlisted)
                 {
-                    <form class="form-inline" asp-route-gameid="@Model.GameId" asp-controller="Wishlist" asp-action="Remove">
+                    <form class="form-inline" asp-route-gameid="@Model.GameId" asp-controller="Wishlist" asp-action="Remove" asp-route-returnUrl="@Url.Action("Details", "Game", new { id = @Model.GameId })">
                         <button type="submit" class="btn btn-primary btn-block btn-lg">Remove from wishlist</button>
                     </form>
                 }
                 else
                 {
-                    <form class="form-inline" asp-route-gameid="@Model.GameId" asp-controller="Wishlist" asp-action="Add">
+                    <form class="form-inline" asp-route-gameid="@Model.GameId" asp-controller="Wishlist" asp-action="Add" asp-route-returnUrl="@Url.Action("Details", "Game", new { id = @Model.GameId })">
                         <button type="submit" class="btn btn-primary btn-block btn-lg">Add to your wishlist</button>
                     </form>
                 }
