Add gender to register

--- a/Sprint/Sprint/Views/Shared/_Layout.cshtml
+++ b/Sprint/Sprint/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
         <div class="container-fluid" style="text-align: center; color: #ffffff;">
             <div class="row">
                 <div class="col-4 footerLinks" style="padding-top: 10px;">&copy; 2020 Moist Gaming</div>
-                <div class="col-4 footerLinks"><img src="~/image/moistLogo2.png" /></div>
+                <div class="col-4 footerLinks" style="padding-bottom: 10px;"><img src="~/image/moistLogo2.png" /></div>
                 <div class="col-4 footerLinks" style="padding-top: 10px;">
                     <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                 </div>
