--- a/Sprint/Sprint/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Sprint/Sprint/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,10 +4,12 @@
     ViewData["Title"] = "Register";
 }
 
+<section>
+
     <h1 class="text-center">@ViewData["Title"]</h1>
 
     <div class="row">
-       
+
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4 class="text-center">Create a new account.</h4>
             <hr />
@@ -46,10 +48,33 @@
                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
             </div>
-                <button type="submit" class="btn btn-primary button" style="position:relative">Register</button>
+            <div class="row" style="width:60%;padding-left:48%">
+                <label style="float:right;" asp-for="Input.Gender"></label>
+            </div>
+            <div class="text-center">
+                <label for="male" class="radio-inline">
+                    <input type="radio" id="male" name="gender" value="male">
+                    Male
+                </label>
+                <label for="Female" class="radio-inline">
+                    <input type="radio" id="female" name="gender" value="female">
+                    Female
+                </label>
+                <label for="non-binary" class="radio-inline">
+                    <input type="radio" id="non-binary" name="gender" value="non-binary">
+                    Non-binary
+                </label>
+                <label for="other" class="radio-inline">
+                    <input type="radio" id="other" name="gender" value="other">
+                    Other
+                </label>
+                <span asp-validation-for="Input.Gender" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn btn-primary button" style="position:relative">Register</button>
         </form>
-       
-</div>
+    </div>
+</section>
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
