--- a/Sprint/Sprint/wwwroot/css/site.css
+++ b/Sprint/Sprint/wwwroot/css/site.css
@@ -12,6 +12,15 @@ a {
     color: #0366d6;
 }
 
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #525557;
+    margin: 1em 0;
+    padding: 0;
+}
+
 .btn-primary {
     color: #fff;
     background-color: #1b6ec2;
