--- a/Sprint/Sprint/wwwroot/css/style.css
+++ b/Sprint/Sprint/wwwroot/css/style.css
@@ -8,7 +8,6 @@
 
 body {
     background-color: #343A40;
-    font-family: 'Gotham', sans-serif !important;
     margin: 0;
     margin-bottom: 60px;
 }
@@ -21,8 +20,65 @@ body {
     padding: 20px;
 }
 
+.moist-bg-light {
+    background-color: #d3d3d3;
+}
+
+.moist-shadow {
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.5) !important;
+}
+
+/* Carousel */
+.carousel-indicators {
+    bottom: -50px;
+}
+
+ol.carousel-indicators li,
+ol.carousel-indicators li.active {
+    opacity: 1;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 41px;
+}
+
+ol.carousel-indicators li {
+    height: 1px;
+    background-color: #525557;
+}
+
+ol.carousel-indicators li.active {
+    height: 3px;
+    background-color: #1E90FF;
+    border-top: 9px solid transparent;
+    border-bottom: 9px solid transparent;
+}
+
+.carousel-control-prev {
+    opacity: .25;
+    margin-left: -100px;
+}
+
+.carousel-control-next {
+    opacity: .25;
+    margin-right: -100px;
+}
+
+.carousel-info {
+    position: absolute;
+    height: 20%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 5%;
+    z-index: 20;
+    color: white;
+    text-shadow: 0 1px 2px rgba(0,0,0,.6);
+    background-image: linear-gradient(180deg, rgba(52,58,64,0), rgba(50,40,40,0.8));
+}
+
+/* site */
 label, p, h1, h4, td, th, dt, dd {
-    color:white;
+    color: white;
 }
 
 input {
@@ -40,16 +96,17 @@ input {
 }
 
 .col-md-12 {
-    float:left;
-    width:50%;
+    float: left;
+    width: 50%;
 }
 
 label.radio-inline {
-    padding-right:15px;
+    padding-right: 15px;
 }
 
 .button {
-float:right;}
+    float: right;
+}
 
 .imagesize {
     width: 100%;
@@ -62,17 +119,13 @@ float:right;}
     width: 450px;
 }
 
-    .carouselnav a {
-        float: left;
-        font-size: 16px;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
-
-.carousel-item {
-    height:215px;
+.carouselnav a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 .carouselstyle {
@@ -81,13 +134,12 @@ float:right;}
     align-items: center;
 }
 
-.carouselTitle {
-    text-align: left;
-    color: white;
+ul.nav .nav-link:hover {
+    color: #84878a !important;
 }
 
 .navbar a:hover, .subnav:hover .subnavbtn {
-    background-color: dodgerblue;
+    color: #1E90FF;
 }
 
 .sectionHeading {
@@ -95,7 +147,7 @@ float:right;}
 }
 
 .specialOffers {
-    background-color: dodgerblue;
+    background-color: #1E90FF;
     height: 3em;
     margin-left: 0px !important;
     margin-right: 0px !important;
@@ -109,9 +161,9 @@ float:right;}
 }
 
 .detailimage {
-    width:50%;
-    height:50%;
-    float:left;
+    width: 50%;
+    height: 50%;
+    float: left;
 }
 
 .detailbutton {
