--- a/Sprint/Sprint/Views/Game/Details.cshtml
+++ b/Sprint/Sprint/Views/Game/Details.cshtml
@@ -7,68 +7,59 @@
     ViewData["Title"] = @Model.Name;
 }
 
-<div style="min-width:580px;">
+<h1>@Model.Name</h1>
 
-    <h1>@Model.Name</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">
+            @foreach (var image in Model.GameImages)
+            {
+                <img class="img-fluid" src="@image.ImageURL">
+            }
+        </div>
+        <div class="col-md-4">
+            <h5 class="text-light">@Html.DisplayNameFor(model => model.Developer)</h5>
+            <p class="text-light">@Html.DisplayFor(model => model.Developer)</p>
 
-    <div>
-        @foreach (var image in Model.GameImages)
-        {
-            <img class="d-block detailimage" src="@image.ImageURL">
-        }
-        <hr />
-        <dl class="row" style="height:215px;max-width:400px;padding-left:20px">
-            <div class="row" style="width:100%">
-                <dt class="col-md-8">
-                    @Html.DisplayNameFor(model => model.Developer)
-                </dt>
-                <dd class="col-md-8">
-                    @Html.DisplayFor(model => model.Developer)
-                </dd>
-            </div>
-            <div class="row" style="width:100%">
-                <dt class="col-md-8">
-                    @Html.DisplayNameFor(model => model.GameType)
-                </dt>
-                <dd class="col-md-8">
-                    @Html.DisplayFor(model => model.GameType.Name)
-                </dd>
-            </div>
-        </dl>
+            <h5 class="text-light">@Html.DisplayNameFor(model => model.GameType)</h5>
+            <p class="text-light">@Html.DisplayFor(model => model.GameType.Name)</p>
+        </div>
     </div>
-    <div class="detailbuttoncontainer">
+
+    <hr />
+
+    <div class="row">
         @if (SignInManager.IsSignedIn(User) && !User.IsInRole("Admin"))
         {
-            <div class="col-sm-4" style="float:left">
+            <div class="col-sm-4">
                 @if (ViewBag.IsWishlisted)
                 {
-                    <form class="form-inline" asp-route-gameid="@Model.GameId" asp-controller="Wishlist" asp-action="Remove" asp-route-returnUrl="@Url.Action("Details", "Game", new { id = @Model.GameId })">
-                        <button type="submit" class="btn btn-primary detailbutton">Remove from wishlist</button>
+                    <form class="w-100" asp-route-gameid="@Model.GameId" asp-controller="Wishlist" asp-action="Remove" asp-route-returnUrl="@Url.Action("Details", "Game", new { id = @Model.GameId })">
+                        <button type="submit" class="btn btn-primary w-100">Remove from wishlist</button>
                     </form>
                 }
                 else
                 {
-                    <form class="form-inline" asp-route-gameid="@Model.GameId" asp-controller="Wishlist" asp-action="Add" asp-route-returnUrl="@Url.Action("Details", "Game", new { id = @Model.GameId })">
-                        <button type="submit" class="btn btn-primary detailbutton">Add to wishlist</button>
+                    <form class="w-100" asp-route-gameid="@Model.GameId" asp-controller="Wishlist" asp-action="Add" asp-route-returnUrl="@Url.Action("Details", "Game", new { id = @Model.GameId })">
+                        <button type="submit" class="btn btn-primary w-100">Add to wishlist</button>
                     </form>
                 }
             </div>
-            <div class="col-sm-4" style="float:inherit">
-                <a class="btn btn-primary detailbutton" role="button" asp-area="" asp-controller="Game" asp-action="Index">Add to Cart</a>
+            <div class="col-sm-4">
+                <a class="btn btn-primary w-100" role="button" asp-area="" asp-controller="Game" asp-action="Index">Add to Cart</a>
             </div>
         }
         else if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
         {
-            <div style="float:left;">
-                <a class="btn btn-primary detailbutton" role="button" asp-action="Delete" asp-route-id="@Model.GameId">Delete</a>
+            <div class="col-sm-4">
+                <a class="btn btn-primary btn-danger w-100" role="button" asp-action="Delete" asp-route-id="@Model.GameId">Delete</a>
             </div>
-            <div class="col-sm-4" style="float:inherit">
-                <a class="btn btn-primary detailbutton" role="button" asp-action="Edit" asp-route-id="@Model.GameId">Edit</a>
+            <div class="col-sm-4">
+                <a class="btn btn-primary w-100" role="button" asp-action="Edit" asp-route-id="@Model.GameId">Edit</a>
             </div>
         }
-        <div class="col-sm-4" style="float:right">
-            <a class="btn btn-primary detailbutton" role="button" asp-action="Index">Back to List</a>
+        <div class="col-sm-4">
+            <a class="btn btn-primary w-100" role="button" asp-action="Index">Back to List</a>
         </div>
     </div>
-    <br />
 </div>
