--- a/Sprint/Sprint/Views/Wishlist/Index.cshtml
+++ b/Sprint/Sprint/Views/Wishlist/Index.cshtml
@@ -1,29 +1,38 @@
-﻿@model IEnumerable<Sprint.Models.UserGameWishlist>
+﻿@using Sprint.Enums;
+
+@model Sprint.Models.Wishlist
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Wishlist</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md">
+            <h1>Wishlist</h1>
+        </div>
+
+        <div class="col-md">
+            <form class="form-inline float-right" asp-action="Edit">
+                <label class="text-light text-uppercase font-weight-light mr-4" for="select-visibility">Your wishlist can be seen by:</label>
+                <select onchange="this.form.submit()" class="form-control right" id="select-visibility" asp-for="WishlistVisibility" asp-items="@Html.GetEnumSelectList<WishlistVisibility>()"></select>
+            </form>
+        </div>
+    </div>
+</div>
 
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Game.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Game.Developer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AddedOn)
-            </th>
+            <th>Name</th>
+            <th>Developer</th>
+            <th>AddedOn</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Games)
         {
             <tr>
                 <td>
