--- a/Sprint/Sprint/Views/Wishlist/Index.cshtml
+++ b/Sprint/Sprint/Views/Wishlist/Index.cshtml
@@ -3,22 +3,25 @@
 @model Sprint.Models.Wishlist
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = $"{Model.Username}'s Wishlist";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container">
     <div class="row">
         <div class="col-md">
-            <h1>Wishlist</h1>
+            <h4 class="text-light font-weight-light text-uppercase">@Model.Username's Wishlist</h4>
         </div>
 
-        <div class="col-md">
-            <form class="form-inline float-right" asp-action="Edit">
-                <label class="text-light text-uppercase font-weight-light mr-4" for="select-visibility">Your wishlist can be seen by:</label>
-                <select onchange="this.form.submit()" class="form-control right" id="select-visibility" asp-for="WishlistVisibility" asp-items="@Html.GetEnumSelectList<WishlistVisibility>()"></select>
-            </form>
-        </div>
+        @if (Model.Authorized)
+        {
+            <div class="col-md">
+                <form class="form-inline float-right mb-2" asp-action="Edit">
+                    <label class="text-light text-uppercase font-weight-light mr-4" for="select-visibility">Your wishlist can be seen by:</label>
+                    <select onchange="this.form.submit()" class="form-control right" id="select-visibility" asp-for="WishlistVisibility" asp-items="@Html.GetEnumSelectList<WishlistVisibility>()"></select>
+                </form>
+            </div>
+        }
     </div>
 </div>
 
@@ -45,9 +48,12 @@
                     @Html.DisplayFor(modelItem => item.AddedOn)
                 </td>
                 <td>
-                    <form class="form-inline" asp-route-gameid="@item.GameId" asp-action="Remove">
-                        <button type="submit" class="btn btn-primary btn-block btn-lg">Remove</button>
-                    </form>
+                    @if (Model.Authorized)
+                    {
+                        <form class="form-inline" asp-route-gameid="@item.GameId" asp-action="Remove">
+                            <button type="submit" class="btn btn-primary btn-block btn-lg">Remove</button>
+                        </form>
+                    }
                 </td>
             </tr>
         }
