Add game filter abilities

--- a/Sprint/Sprint/Views/Friends/Index.cshtml
+++ b/Sprint/Sprint/Views/Friends/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Sprint.Enums;
 
-@model Sprint.Models.Friends
+@model Sprint.ViewModels.FriendsViewModel
 
 @{
     ViewData["Title"] = "Index";
