--- a/Sprint/Sprint/Views/Wishlist/Index.cshtml
+++ b/Sprint/Sprint/Views/Wishlist/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Sprint.Enums;
 
-@model Sprint.Models.Wishlist
+@model Sprint.ViewModels.WishlistViewModel
 
 @{
     ViewData["Title"] = $"{Model.Username}'s Wishlist";
@@ -23,6 +23,22 @@
             </div>
         }
     </div>
+
+    @if (TempData["WishlistAdded"] is string)
+    {
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <div class="alert alert-success" role="alert">
+            <i class="fa fa-heart mr-2" aria-hidden="true"></i>@TempData["WishlistAdded"]
+        </div>
+    }
+
+    @if (TempData["WishlistRemoved"] is string)
+    {
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <div class="alert alert-secondary" role="alert">
+            <i class="fa fa-times-circle mr-2" aria-hidden="true"></i>@TempData["WishlistRemoved"]
+        </div>
+    }
 </div>
 
 @if (Model.Games.Any())
